--- a/en/toc.yaml
+++ b/en/toc.yaml
@@ -328,6 +328,14 @@ items:
                 href: guide/concepts/efficiency-metrics/rejected-tasks.md
               - name: Submission rate
                 href: guide/concepts/efficiency-metrics/submitting-tasks.md
+              - name: Bans
+                href: guide/concepts/efficiency-metrics/ban-rate.md
+              - name: Project availability
+                href: guide/concepts/efficiency-metrics/available-performers.md
+              - name: Control task balance
+                href: guide/concepts/efficiency-metrics/control-tasks-balance.md
+              - name: Quality of instructions
+                href: guide/concepts/efficiency-metrics/instruction-quality.md
   - name: Bespoke solutions
     hidden: true
     items:
