DOCSUP-33242: Added changes from tickets (RU pages): * DOCSUP-34864 * DOCSUP-34945 * DOCSUP-34991 * DOCSUP-35143 * DOCSUP-35249 * DOCSUP-35401 * DOCSUP-35526

--- a/ru/toc.yaml
+++ b/ru/toc.yaml
@@ -522,7 +522,7 @@ items:
         href: guide/troubleshooting/finance.md
       - name: Исполнители
         href: guide/troubleshooting/users.md
-      - name: Вопросы о шаблонах
+      - name: Вопросы о пресетах
         href: guide/troubleshooting/questions-about-templates.md
       - name: Служба поддержки
         href: guide/troubleshooting/support.md
