--- a/en/presets.yaml
+++ b/en/presets.yaml
@@ -1,5 +1,6 @@
 default:
   locale: en-com
+  register-toloka: notfound
   phone-problems_no-code: notfound
   tb-image-annotation: notfound
   acts-settlements-ru: https://yandex.ru/support/balance/operations/acts-settlements.html
