DOC-11008: Updates from DOCSUP-34864 (EN), DOCSUP-34945 (EN), DOCSUP-34991 (EN), DOCSUP-35143 (EN), DOCSUP-35401 (EN), DOCSUP-35856 (RU)

--- a/en/toc.yaml
+++ b/en/toc.yaml
@@ -119,7 +119,7 @@ items:
                 href: guide/concepts/advanced-features-input-selector.md
   - name: Keys
     href: guide/concepts/usecases-keys.md
-    hidden: true    
+    hidden: true
   - name: Projects
     items:
       - name: Steps to follow
@@ -255,9 +255,9 @@ items:
                     href: guide/concepts/skipped-assignments.md
                   - name: Earnings
                     href: guide/concepts/income.md
-                  - name: Submitted answers
+                  - name: Submitted responses
                     href: guide/concepts/submitted-answers.md
-                  - name: Review results
+                  - name: Results of assignment review
                     href: guide/concepts/reviewing-assignments.md
                   - name: Recompletion of assignments from banned users
                     href: guide/concepts/restore-task-overlap.md
@@ -513,7 +513,7 @@ items:
         href: guide/troubleshooting/finance.md
       - name: Tolokers
         href: guide/troubleshooting/users.md
-      - name: Questions about templates
+      - name: Questions about presets
         href: guide/troubleshooting/questions-about-templates.md
       - name: Support
         href: guide/troubleshooting/support.md
