DOC-10958: Changed Toloka sandbox domain (includes all docs)

--- a/presets.yaml
+++ b/presets.yaml
@@ -83,10 +83,10 @@ default:
   register: https://passport.toloka.ai/registration?mode=register&retpath=https://platform.toloka.ai
   restore: https://passport.toloka.ai/passport?mode=restore
   safari-mobile: https://support.apple.com/guide/safari-developer/simulate-responsive-web-content-apple-devices-dev84bd42758/mac
-  sandbox: https://sandbox.toloka.yandex.com/for-requesters
-  sandbox-for-performers: https://sandbox.toloka.yandex.com/tasks
-  sandbox-profile: https://sandbox.toloka.yandex.com/requester/profile
-  sandbox-profile-integration: https://sandbox.toloka.yandex.com/requester/profile/integration
+  sandbox: https://platform.sandbox.toloka.ai/for-requesters
+  sandbox-for-performers: https://platform.sandbox.toloka.ai/tasks
+  sandbox-profile: https://platform.sandbox.toloka.ai/requester/profile
+  sandbox-profile-integration: https://platform.sandbox.toloka.ai/requester/profile/integration
   selection-of-images-groups: https://codepen.io/Toloka_projects/pen/KJELbO
   skills: https://platform.toloka.ai/requester/quality
   statistical-significance: https://en.wikipedia.org/wiki/Statistical_significance
