--- a/presets.yaml
+++ b/presets.yaml
@@ -53,6 +53,7 @@ default:
   imgbb: https://imgbb.com/
   imgur: https://imgur.com/
   instr-in-form-of-side-window: https://codepen.io/Toloka_projects/pen/YONRWq
+  integration: https://platform.toloka.ai/requester/profile/integration
   internet-search-preset: https://platform.toloka.ai/requester/templates?choosedCard=axZaOYyyyQ1F0RZkJ0Zy
   invoices: https://balance.yandex.ru/persons.xml?LANG=en
   ios-app: https://apps.apple.com/us/app/yandex-toloka/id1282350367
@@ -74,6 +75,7 @@ default:
   passport-support: https://yandex.com/support/passport/troubleshooting/problems.html
   paypal: https://www.paypal.com/home
   persons: https://balance.yandex.ru/invoices.xml?LANG=en
+  phone-problems_no-code: https://yandex.com/dev/id/doc/dg/
   phones: https://passport.toloka.ai/profile/phones
   pics-st: https://pics.st/
   postimages: https://postimages.org/
@@ -146,7 +148,10 @@ default:
   wiki-wav: https://en.wikipedia.org/wiki/WAV
   wiki-webm: https://en.wikipedia.org/wiki/WebM
   ya-maps-object-search: https://yandex.com/support/maps/concept/object-search.html
+  yadisk: https://disk.yandex.com
+  yadisk-app: https://disk.yandex.com/promo/download
+  yadisk-client: https://disk.yandex.com/client/disk
   yandex-cloud-free-trial: https://cloud.yandex.com/en-ru/docs/free-trial/
-  yandex-id: https://id.yandex.ru/about
+  yandex-id: https://id.yandex.com/about
   yandex-toloka: https://platform.toloka.ai/for-requesters/
   yandex-tts: https://cloud.yandex.com/en-ru/docs/storage/operations/buckets/lifecycles
